feat: apply api & login service

--- a/src/app/features/admin/containers/property-content/container/property-content-edit/property-content-edit.component.html
+++ b/src/app/features/admin/containers/property-content/container/property-content-edit/property-content-edit.component.html
@@ -96,7 +96,7 @@
                        class="ml-4 text-sm text-gray-300">·</div>
                   <div class="ml-4 flex">
                     <a href="#"
-                       class="text-sm font-medium text-indigo-600 hover:text-indigo-500">See all 512 reviews</a>
+                       class="text-sm font-medium text-emerald-600 hover:text-emerald-500">See all 512 reviews</a>
                   </div>
                 </div>
               </dl>
