--- a/src/app/features/admin/containers/analytic/components/category-stats/category-stats.component.html
+++ b/src/app/features/admin/containers/analytic/components/category-stats/category-stats.component.html
@@ -29,7 +29,7 @@
           <div class="rating mx:auto w-100 bottom-8">
             <div class="d-flex">
               <div class="ml-4">
-                <h5 class="text-sm text-lime-500"><i class="fa-solid fa-arrow-down"></i><span class="text-muted ml-1"> 20%</span>
+                <h5 class="text-sm text-lime-500"><i class="fa-solid fa-arrow-up"></i><span class="text-muted ml-1"> 20%</span>
                 </h5>
                 <h5 class="text-primary text-sm">2000 property created</h5>
               </div>
