--- a/src/app/features/error/error.component.html
+++ b/src/app/features/error/error.component.html
@@ -3,13 +3,16 @@
 		<div class="col-md-12">
 			<div class="error-template">
 				<h1>Oh Error!</h1>
-				<img src="../../../assets/images/404-error.gif" alt="error">
+				<img src="../../../assets/images/404-error.gif"
+						 alt="error"
+						 class="mx-auto">
 				<div class="error-details">
 					An error occurred, the requested page could not be found.
 				</div>
 				<div class="error-actions">
 					<a routerLink="/home"
-						 class="btn btn-primary btn-md" (click)="goHome()">
+						 class="btn btn-primary btn-md"
+						 (click)="goHome()">
 						Back to Home
 					</a>
 				</div>
