--- a/src/app/features/admin/containers/user-management/container/user-management-edit/user-management-edit.component.html
+++ b/src/app/features/admin/containers/user-management/container/user-management-edit/user-management-edit.component.html
@@ -2,147 +2,90 @@
   <mp-loading *ngIf="$isLoading; else loaded"
               height="600px"></mp-loading>
   <ng-template #loaded>
-    <form class="space-y-8 divide-y divide-gray-200">
+    <form class="space-y-8 divide-y divide-gray-200"
+          [formGroup]="userForm">
       <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
-        <form class="space-y-8 divide-y divide-gray-200">
-          <div class="ml-6">
+        <div class="ml-6">
+          <div>
             <div>
-              <div>
-                <h3 class="text-lg font-medium leading-6 text-gray-900">Profile</h3>
-              </div>
-              <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                <div class="sm:col-span-4">
-                  <label for="username"
-                         class="block text-sm font-medium text-gray-700">Username</label>
-                  <div class="mt-1 flex rounded-md shadow-sm">
-                    <input type="text"
-                           name="username"
-                           id="username"
-                           autocomplete="username"
-                           class="mt-1 block p-2 border w-full rounded-md shadow-sm focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm mb-1">
-                  </div>
-                </div>
-                <div class="sm:col-span-6">
-                  <label for="photo"
-                         class="block text-sm font-medium text-gray-700">Photo</label>
-                  <div class="mt-1 flex items-center">
-                    <span class="h-12 w-12 overflow-hidden rounded-full bg-gray-100">
-                      <svg class="h-full w-full text-gray-300"
-                           fill="currentColor"
-                           viewBox="0 0 24 24">
-                        <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
-                      </svg>
-                    </span>
-                  </div>
-                </div>
-              </div>
+              <h3 class="text-lg font-medium leading-6 text-gray-900">Profile</h3>
             </div>
-
-            <div class="pt-8">
-              <div>
-                <h3 class="text-lg font-medium leading-6 text-gray-900">Personal Information</h3>
-              </div>
-              <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
-                <div class="sm:col-span-4">
-                  <label for="email"
-                         class="block text-sm font-medium text-gray-700">Email address</label>
-                  <div class="mt-1">
-                    <input id="email"
-                           name="email"
-                           type="email"
-                           autocomplete="email"
-                           class="mt-1 block p-2 border w-full rounded-md shadow-sm focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm mb-1">
-                  </div>
+            <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+              <div class="sm:col-span-4">
+                <label for="username"
+                       class="block text-sm font-medium text-gray-700">Username</label>
+                <div class="mt-1">
+                  <input type="text"
+                         name="username"
+                         id="username"
+                         formControlName="name"
+                         class="mt-1 block p-2 border w-full rounded-md shadow-sm focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm mb-1">
                 </div>
-                <div class="sm:col-span-4">
-                  <label for="email"
-                         class="block text-sm font-medium text-gray-700">Phone Number</label>
-                  <div class="mt-1">
-                    <input id="phone"
-                           name="phone"
-                           type="phone"
-                           autocomplete="phone"
-                           class="mt-1 block p-2 border w-full rounded-md shadow-sm focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm mb-1">
-                  </div>
-                  <div class="sm:col-span-4">
-                    <label for="role"
-                           class="block text-sm font-medium text-gray-700">Role</label>
-                    <div class="relative mt-1">
-                      <button type="button"
-                              class="relative w-full cursor-default rounded-md border border-gray-300 bg-white py-2 pl-3 pr-10 text-left shadow-sm focus:border-emerald-500 focus:outline-none focus:ring-1 focus:ring-emerald-500 sm:text-sm"
-                              aria-haspopup="listbox"
-                              aria-expanded="true"
-                              aria-labelledby="listbox-label">
-                        <span class="block truncate">Tom Cook</span>
-                        <span class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2">
-                          <!-- Heroicon name: mini/chevron-up-down -->
-                          <svg class="h-5 w-5 text-gray-400"
-                               xmlns="http://www.w3.org/2000/svg"
-                               viewBox="0 0 20 20"
-                               fill="currentColor"
-                               aria-hidden="true">
-                            <path fill-rule="evenodd"
-                                  d="M10 3a.75.75 0 01.55.24l3.25 3.5a.75.75 0 11-1.1 1.02L10 4.852 7.3 7.76a.75.75 0 01-1.1-1.02l3.25-3.5A.75.75 0 0110 3zm-3.76 9.2a.75.75 0 011.06.04l2.7 2.908 2.7-2.908a.75.75 0 111.1 1.02l-3.25 3.5a.75.75 0 01-1.1 0l-3.25-3.5a.75.75 0 01.04-1.06z"
-                                  clip-rule="evenodd" />
-                          </svg>
-                        </span>
-                      </button>
-
-                      <!--
-                            Select popover, show/hide based on select state.
-
-                            Entering: ""
-                              From: ""
-                              To: ""
-                            Leaving: "transition ease-in duration-100"
-                              From: "opacity-100"
-                              To: "opacity-0"
-                          -->
-                      <ul class="combo-box-role absolute z-10 mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm"
-                          tabindex="-1"
-                          role="listbox"
-                          aria-labelledby="listbox-label"
-                          aria-activedescendant="listbox-option-3">
-                        <!--
-                              Select option, manage highlight styles based on mouseenter/mouseleave and keyboard navigation.
-
-                              Highlighted: "text-white bg-emerald-600", Not Highlighted: "text-gray-900"
-                            -->
-                        <li class="text-gray-900 relative cursor-default select-none py-2 pl-8 pr-4"
-                            id="listbox-option-0"
-                            role="option">
-                          <!-- Selected: "font-semibold", Not Selected: "font-normal" -->
-                          <span class="font-normal block truncate">Host</span>
-
-                          <!--
-                                Checkmark, only display for selected option.
-
-                                Highlighted: "text-white", Not Highlighted: "text-emerald-600"
-                              -->
-                          <span class="text-emerald-600 absolute inset-y-0 left-0 flex items-center pl-1.5">
-                            <!-- Heroicon name: mini/check -->
-                            <svg class="h-5 w-5"
-                                 xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 20 20"
-                                 fill="currentColor"
-                                 aria-hidden="true">
-                              <path fill-rule="evenodd"
-                                    d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                          </span>
-                        </li>
-
-                        <!-- More items... -->
-                      </ul>
-                    </div>
-
-                  </div>
+              </div>
+              <div class="sm:col-span-6">
+                <label for="photo"
+                       class="block text-sm font-medium text-gray-700">Photo</label>
+                <div class="mt-1 flex items-center">
+                  <span class="h-12 w-12 overflow-hidden rounded-full bg-gray-100">
+                    <svg class="h-full w-full text-gray-300"
+                         fill="currentColor"
+                         viewBox="0 0 24 24">
+                      <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
+                    </svg>
+                  </span>
                 </div>
               </div>
             </div>
           </div>
-        </form>
+
+          <div class="pt-8">
+            <div>
+              <h3 class="text-lg font-medium leading-6 text-gray-900">Personal Information</h3>
+            </div>
+            <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+              <div class="sm:col-span-4">
+                <label for="email"
+                       class="block text-sm font-medium text-gray-700">Email address</label>
+                <div class="mt-1">
+                  <input id="email"
+                         name="email"
+                         type="email"
+                         formControlName="email"
+                         [attr.disabled]="true"
+                         class="mt-1 block p-2 border w-full rounded-md shadow-sm focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm mb-1">
+                </div>
+              </div>
+              <div class="sm:col-span-4">
+                <label for="email"
+                       class="block text-sm font-medium text-gray-700">Phone Number</label>
+                <div class="mt-1">
+                  <input id="phone"
+                         name="phone"
+                         type="phone"
+                         formControlName="phone"
+                         class="mt-1 block p-2 border w-full rounded-md shadow-sm focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm mb-1">
+                </div>
+                <!-- <div class="sm:col-span-4">
+                    <label for="role"
+                           class="block text-sm font-medium text-gray-700">Role</label>
+                    <div class="relative mt-1 grid">
+                      <mat-form-field appearance="outline">
+                        <mat-select disableOptionCentering
+                                    [(value)]="selectedRole"
+                                    panelClass="dropDown-seasons-panel">
+                          <mat-option *ngFor="let role of roles"
+                                      [value]="role.value">
+                            {{role.viewValue}}
+                          </mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+
+                  </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
       <div class="pt-5">
@@ -153,7 +96,7 @@
                     mat-dialog-close="false"
                     class="bg-white-500 border text-black active:bg-secondary text-sm font-bold px-6 py-2 rounded hover:bg-slate-50 outline-none focus:outline-none mr-2 mb-1 ease-linear transition-all duration-150">Cancel</button>
             <button type="submit"
-                    mat-dialog-close="true"
+                    (click)="saveUser()"
                     class="bg-emerald-600 text-white active:bg-secondary text-sm font-bold px-6 py-2 rounded hover:bg-emerald-700 outline-none focus:outline-none mb-1 ease-linear transition-all duration-150">Save</button>
           </div>
         </div>
