fix: fix ui vertical side bar

--- a/src/app/ui/layout/admin-layout/admin-layout.component.html
+++ b/src/app/ui/layout/admin-layout/admin-layout.component.html
@@ -4,7 +4,7 @@
                class="relative">
     <mp-vertical-navigation></mp-vertical-navigation>
     <div class="absolute bottom-0 w-100 bg-white shadow p-2">
-      <button class="bg-emerald-400 text-white active:bg-secondary text-sm font-bold uppercase px-6 py-2 rounded shadow hover:bg-emerald-400 outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150"
+      <button class="bg-red-500 text-white active:bg-secondary text-sm font-bold uppercase px-6 py-2 rounded shadow hover:bg-emerald-400 outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150"
               type="button"
               (click)="logOut()">
         <i class="fa-duotone fa-arrow-right-from-bracket"></i> Log Out
