--- a/src/app/features/admin/containers/property-content/property-content.component.html
+++ b/src/app/features/admin/containers/property-content/property-content.component.html
@@ -21,11 +21,11 @@
                 Status
               </mat-label>
               <mat-select matNativeControl
-                          name="isSolved"
-                          id="isSolved"
+                          name="isVerified"
+                          id="isVerified"
                           disableOptionCentering
                           panelClass="property-content"
-                          [(ngModel)]="isSolved"
+                          [(ngModel)]="isVerified"
                           (ngModelChange)="search()">
                 <mat-option value="All">All</mat-option>
                 <mat-option value="Verified">Verified</mat-option>
