--- a/src/app/features/admin/containers/user-management/user-management.component.html
+++ b/src/app/features/admin/containers/user-management/user-management.component.html
@@ -70,8 +70,7 @@
                   (sortChanged)="onSortChanged($event)"
                   (clickedRow)="onClickedRow($event)"
                   (openMessage)="onOpenMessage($event)"
-                  (removed)="openConfirmDialog($event)"
-                  (clickUrl)="onClickUrl($event)"></mp-table>
+                  (removed)="openConfirmDialog($event)"></mp-table>
       </ng-template>
       <mp-paginator [pagination]="pagination"
                     (pageChange)="onChangePagination($event)"></mp-paginator>
