--- a/src/app/features/admin/containers/analytic/components/stat-card/stat-card.component.html
+++ b/src/app/features/admin/containers/analytic/components/stat-card/stat-card.component.html
@@ -16,7 +16,7 @@
          *ngIf="isGrowth"></i>
       <i class="fa-solid fa-arrow-down"
          *ngIf="!isGrowth"></i>
-      {{ percent }}</span><span class="text-muted ml-1">
+      {{ percent }}%</span><span class="text-muted ml-1">
     </span>
   </div>
 
