fix: vertical UI

--- a/src/app/ui/layout/admin-layout/components/vertical-navigation/vertical-navigation.component.html
+++ b/src/app/ui/layout/admin-layout/components/vertical-navigation/vertical-navigation.component.html
@@ -25,7 +25,7 @@
             </span>
           </a>
         </ng-container>
-        <a mat-list-item
+        <!-- <a mat-list-item
            href="https://app.intercom.com/a/apps/h6uvlfig/users/segments/all-leads"
            target="_blank">
           <img width="20px"
@@ -35,7 +35,7 @@
           <span class="whitespace-nowrap">
             Customer Support
           </span>
-        </a>
+        </a> -->
       </mat-nav-list>
     </mat-accordion>
   </div>
