--- a/src/app/features/admin/containers/property-content/container/property-content-edit/property-content-edit.component.html
+++ b/src/app/features/admin/containers/property-content/container/property-content-edit/property-content-edit.component.html
@@ -29,12 +29,12 @@
                     <dt class="font-medium text-gray-900">Rating</dt>
                     <dd class="ml-2 text-gray-700 align-center">
                       <p class="text-sm text-gray-700 align-center">
-                        {{propertyData.rating !== null ? propertyData.rating / 2 : 0}}
+                        {{propertyData.avgRating !== null ? propertyData.avgRating / 2 : 0}}
                         <span class="sr-only"> out of 5 stars</span>
                       </p>
 
                     </dd>
-                    <div *ngIf="propertyData.rating === null;else hasRating">
+                    <div *ngIf="propertyData.avgRating === null;else hasRating">
                       <div class="rating ml-1 flex">
                         <!--
                     </div>
@@ -98,7 +98,7 @@
                       </div>
                     </div>
                     <ng-template #hasRating>
-                      <div *ngFor="let rating of [].constructor(rating); let i = index">
+                      <div *ngFor="let rating of [].constructor(avgRating); let i = index">
                         <svg class="text-yellow-400 h-5 w-5 flex-shrink-0"
                              xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 20 20"
