--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -48,7 +48,7 @@
           <td mat-cell
               *matCellDef="let row"
               [ngClass]="{ capitalize: !column.uncapitalized}">
-            <ng-container *ngIf="column.field === 'rating'; else contentField">
+            <ng-container *ngIf="column.field === 'avgRating'; else contentField">
               <div class="flex items
                 -center justify-start">
                 <div class="flex items-start">
